--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -550,6 +550,7 @@ iframe {
   border: 0.1px rgb(197, 197, 197) solid;
   background: #fff;
   height: 50px;
+  width: 50%;
   border-radius: 25px;
   padding: 0 30px 0 53px;
 }
